--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4",
     "react-tabs": "^6.0.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.6.13"
