--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 18
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v1
         with:
           node-version: 18.x
