--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,11 +15,11 @@ jobs:
   primary:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 18.x
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1=2
         with:
-          node-version: 18.x
+          node-version: 16.x
       - name: install dependencies
         run: npm install
       - name: build
