--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,12 +1,9 @@
-name:  CI/CD
+name: CI/CD
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the master branch
   push:
     branches:
-      -  master
-
+      - master
   pull_request:
     branches:
       - master
@@ -17,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v1=2
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
       - name: install dependencies
