--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-     "test": "echo \"Error: no test specified\" && exit 1",
-     "deploy-aws": "aws s3 sync build s3:ifonixapp"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy-aws": "aws s3 sync build s3://ifonixapp" // Corrected the S3 bucket URL
   },
+  
+},
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
