--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy-aws": "aws s3 sync build s3://ifonixapp" 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy-aws": "aws s3 sync build s3://ifonixapp"
   },
-  
-},
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
