--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-aws": "aws s3 sync build s3:ifonixapp"
+    "deploy-aws": "aws s3 sync build  s3://ifonixapp"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
