--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,6 +28,6 @@ jobs:
       #   run: BUILD_DIRECTORY=build BUCKET_NAME=ifonixapp AWS_ACCESS_KEY_ID=${{AKIAZX2HF54Z5JBYI75E}} AWS_SECRET_ACCESS_KEY=${{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}} npm run deploy-aws
       - name: aws deploy
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{AKIAZX2HF54Z5JBYI75E}}
+          AWS_SECRET_ACCESS_KEY: ${{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}}
         run: BUILD_DIRECTORY=build BUCKET_NAME=ifonixapp npm run deploy-aws
