--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   primary:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu 18.04
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
