--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -26,8 +26,6 @@ jobs:
       # AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY
       - name: aws deploy
         env:
-          BUILD_DIRECTORY: build
-          BUCKET_NAME: ifonixapp
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run:  npm run deploy-aws
+        run: BUILD_DIRECTORY=build BUCKET_NAME=ifonixapp npm run deploy-aws
