--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -26,6 +26,6 @@ jobs:
       # AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY
       - name: aws deploy
         env:
-          AWS_ACCESS_KEY_ID: AKIAZX2HF54Z5JBYI75E
-          AWS_SECRET_ACCESS_KEY: 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
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: BUILD_DIRECTORY=build BUCKET_NAME=ifonixapp npm run deploy-aws
