--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,22 +1,35 @@
-name: s3-depl
+name: s3-deploy
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build React App
+        run: npm run build
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}  # Set any valid AWS region (won't impact global S3 bucket)
-      - name: Build React App
-        run: npm install && npm run build
-      - name: Deploy app build to S3 bucket
+          aws-region: 'us-east-1'
+
+      - name: Deploy to S3 bucket
         run: aws s3 sync ./build/ s3://ifonixapp --delete
