--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,35 +1,33 @@
-name: s3-deploy
+name:  CI/CD
 
 on:
+  # Trigger the workflow on push or pull request,
+  # but only for the master branch
   push:
+    branches:
+      -  master
+
+  pull_request:
     branches:
       - master
 
 jobs:
-  deploy:
+  primary:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-
-      - name: Install dependencies
+      - name: install dependencies
         run: npm install
-
-      - name: Build React App
+      - name: build
         run: npm run build
+      - name: test
+        run: npm run test
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy to S3 bucket
-        run: aws s3 sync ./build/ s3://ifonixapp --delete
+      # should save this keys in github, settings of the project, secrets :
+      # AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY
+      - name: aws deploy
+        run: BUILD_DIRECTORY=dist BUCKET_NAME=ifonixapp AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} npm run deploy-aws
