--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "ifonix-fe",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-aws": "aws s3 sync build  s3://ifonixapp"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
